[gd_scene load_steps=41 format=3 uid="uid://c2t4gyw6syd8r"]

[ext_resource type="Script" uid="uid://bqkke0muc60oe" path="res://script/enemy.gd" id="1_f87vc"]
[ext_resource type="Texture2D" uid="uid://b7sx2so1qmkqq" path="res://slime.png" id="2_8u16h"]
[ext_resource type="Texture2D" uid="uid://c8xdl8ymd5ysg" path="res://Sprite-0003.png" id="3_b7koy"]
[ext_resource type="Texture2D" uid="uid://depkm3fwm2s8n" path="res://Sprite-0002 (1).png" id="4_yvcfn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f87vc"]
atlas = ExtResource("2_8u16h")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u16h"]
atlas = ExtResource("2_8u16h")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7koy"]
atlas = ExtResource("2_8u16h")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvcfn"]
atlas = ExtResource("2_8u16h")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulb22"]
atlas = ExtResource("2_8u16h")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e552"]
atlas = ExtResource("2_8u16h")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgurf"]
atlas = ExtResource("2_8u16h")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqmod"]
atlas = ExtResource("2_8u16h")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqle"]
atlas = ExtResource("2_8u16h")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw261"]
atlas = ExtResource("2_8u16h")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs6j2"]
atlas = ExtResource("2_8u16h")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n578"]
atlas = ExtResource("2_8u16h")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gyqm"]
atlas = ExtResource("2_8u16h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2p4"]
atlas = ExtResource("2_8u16h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("2_8u16h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("2_8u16h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("2_8u16h")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("2_8u16h")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("2_8u16h")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("2_8u16h")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("2_8u16h")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("2_8u16h")
region = Rect2(160, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n0g06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f87vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u16h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7koy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvcfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulb22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e552")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgurf")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqmod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw261")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs6j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n578")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gyqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_b7koy"]
radius = 109.041

[sub_resource type="CircleShape2D" id="CircleShape2D_yvcfn"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f87vc"]
radius = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqle"]
radius = 19.0263

[sub_resource type="Animation" id="Animation_8u16h"]
length = 2.0
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.60008),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Radius/Radius_attacki:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.3, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.865881, 1.32161, 1.85796),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2.3, 2.3), Vector2(2.3, 2.3), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.742246, 0.918484, 1.09342, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.889961, 0.0122616, 2.88785e-07, 1), Color(0.889961, 0.0122616, 2.98023e-07, 1), Color(0.889961, 0.0122616, 2.98023e-07, 1), Color(1, 1, 1, 1)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.24033),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shaking_true"
}, {
"args": [],
"method": &"shaking_false"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TextureProgressBar:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 0.733333, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-19, -19), Vector2(-19, -19), Vector2(-19, -39), Vector2(-19, -19)]
}

[sub_resource type="Animation" id="Animation_b7koy"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_yvcfn"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_1e552"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Radius/Radius_attacki:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureProgressBar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-19, -19)]
}

[sub_resource type="Animation" id="Animation_ulb22"]
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vgurf"]
_data = {
&"Attack": SubResource("Animation_8u16h"),
&"Death": SubResource("Animation_b7koy"),
&"Idle": SubResource("Animation_yvcfn"),
&"RESET": SubResource("Animation_1e552"),
&"Walk": SubResource("Animation_ulb22")
}

[sub_resource type="Animation" id="Animation_vgurf"]
resource_name = "take_damage"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/hp_damage:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.884314, 3.20069e-06, 1.15514e-06, 1), Color(0.88, 0, 0, 0.0313726)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/hp_damage:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-30, -75), Vector2(-35, -350)]
}

[sub_resource type="Animation" id="Animation_kqmod"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/hp_damage:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.884314, 3.20069e-06, 1.15514e-06, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/hp_damage:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-30, -85)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kqmod"]
_data = {
&"RESET": SubResource("Animation_kqmod"),
&"take_damage": SubResource("Animation_vgurf")
}

[node name="enemy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 4
script = ExtResource("1_f87vc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_n0g06")
animation = &"Attack"
autoplay = "Idle"

[node name="detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource("CircleShape2D_b7koy")

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_yvcfn")

[node name="Radius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Radius_attacki" type="CollisionShape2D" parent="Radius"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_f87vc")
disabled = true

[node name="zone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Zona_attaki" type="CollisionShape2D" parent="zone"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_qhqle")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vgurf")
}

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
self_modulate = Color(0.66, 0.0198, 0.0304698, 0.870588)
offset_left = -19.0
offset_top = -19.0
offset_right = 19.0
offset_bottom = -7.0
nine_patch_stretch = true
texture_under = ExtResource("3_b7koy")
texture_progress = ExtResource("4_yvcfn")

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2(0.2, 0.2)

[node name="take_damage" type="AnimationPlayer" parent="Node2D"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_kqmod")
}

[node name="hp_damage" type="Label" parent="Node2D"]
self_modulate = Color(0.884314, 3.20069e-06, 1.15514e-06, 1)
z_index = 1
offset_left = -30.0
offset_top = -85.0
offset_right = 15.0
offset_bottom = -50.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 25
text = "-20"

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="Radius" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="zone" to="." method="_on_zone_body_entered"]
[connection signal="body_exited" from="zone" to="." method="_on_zone_body_exited"]
